Fix attached cors headers